--- a/index.html
+++ b/index.html
@@ -29,39 +29,34 @@
         <h3> Sports Editor </h3>
         <h4> La Voz Unida </h4>
         <h5> March 2020 - Present </h5>
-    <ul>
-    <p> I managed the sports section for a new, independent student-run
+          <p> I managed the sports section for a new, independent student-run
         publication at the University of Maryland. I helped establish and implement the vision, target demographics and
-        social media strategy for the newspaper. </p> </ul>
+        social media strategy for the newspaper. </p>
         <br>
     <h3> Network News Intern </h3>
     <h4> Univision Communications Inc. </h4>
     <h5> June 2019 - August 2019 </h5>
-    <ul>
       <p> I assisted in production of Univision’s network news shows,
         online and on-air and the special coverage of Joaquín “El Chapo” Guzmán’s sentencing.
         I was also <a href=https://twitter.com/akerman_david/status/1154496804815331330>
           featured </a> on a segment for Univision’s Edición Digital
-          on National Intern Day </p> </ul>
+          on National Intern Day </p>
     <br>
     <h3>Play-by-Play and Color Commentator, Radio Host </h3>
     <h4>WMUC Sports</h4>
     <h5>August 2017 – September 2019</h5>
-      <ul>
         <p> I provided play-by-play and color commentary for the University
         of Maryland's women's soccer team.I became the first commentator to call a game in Spanish for
         WMUC Sports. I recapped the biggest news in MMA each week as the host of
-          "MMA Talk."</p> </ul>
+          "MMA Talk."</p>
         <br>
      <h3> Co-Sports Editor </h3>
      <h4>The Raider Voice: Gulliver Preparatory's Newspapers</h4>
      <h5>August 2016 - May 2017 </h5>
-     <ul>
        <p>I managed the sports section for Gulliver Preparatory’s award-winning
          newspaper. My responsibilities included assigning and writing articles,
          conducting interviews with different subjects, and designing the
          layout for the sports section. </p>
-      </ul>
       <br>
       <h2> Education: </h2>
       <ul>
