--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
 <title> David Akerman's Resume </title>
+<style>
+  h1 {
+    font-size: 36px;
+    color: #33485e; }
+</style>
 </head>
 <body>
 <!-- I built this myself!-->
