--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
 <title> David Akerman's Resume </title>
-<style>
-  h1 {
-    font-size: 36px;
-    color: #33485e; }
-</style>
+  <link rel="stylesheet" type ="text/css" href="style.css"
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+
 </head>
 <body>
 <!-- I built this myself!-->
 <h1> David Akerman</h1>
+
+<!--
 <img src="resume photo.jpg" width="300px"> </img>
+!-->
 <ul>
   <li>davidakerman21@gmail.com</li>
   <li><a href=https://www.linkedin.com/in/david-m-akerman/>Linkedin </a> </li>
@@ -67,16 +68,16 @@
       <ul>
         <li>Bachelor’s Candidate, Broadcast Journalism, University of Maryland
         </li>
-        <li> <strong> Expected Graduation: </strong> May 2021 </li>
+        <li> Expected Graduation: May 2021 </li>
       </ul>
       <br>
       <h2> Skills: </h2>
       <ul>
-        <li> <strong> Photo and Video Editing:</strong>
+        <li>
           Proficient in Adobe Photoshop and Adobe Premiere Pro </li>
-        <li> <strong> Communication:</strong>
+        <li>
           Native speaker of both English and Spanish </li>
-        <li> <strong> Journalism:</strong>
+        <li>
           Experienced in different aspects of journalism including
           writing, editing, and visual storytelling. </li>
       </ul>
