finished styling as instructed in video

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
 <!-- I built this myself!-->
-<h1> David Akerman</h1>
+
+<div id="container">
+
+<div id="name"> David Akerman</div>
 
 <!--
 <img src="resume photo.jpg" width="300px"> </img>
@@ -24,7 +27,7 @@
     <p>David is currently a senior at the University of Maryland, majoring
     in Broadcast Journalism and minoring in Spanish. </p>
     <br>
-<h2> Experience: </h2>
+<div id="sectionheader"> Experience: </div>
 <h3> Staff Writer </h3>
 <h4>Heatnation.com </h4>
 <h5> October 2017 - Present </h5>
@@ -81,5 +84,7 @@
           Experienced in different aspects of journalism including
           writing, editing, and visual storytelling. </li>
       </ul>
+      
+</div>
 </body>
 </html>
