--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!-- I built this myself!-->
-
+<!-- I added "container" as the id for the div" -->
 <div id="container">
 
 <div id="name"> David Akerman</div>
@@ -16,66 +16,68 @@
 <!--
 <img src="resume photo.jpg" width="300px"> </img>
 !-->
-<ul>
+<ul class="menu">
   <li>davidakerman21@gmail.com</li>
   <li><a href=https://www.linkedin.com/in/david-m-akerman/>Linkedin </a> </li>
   <li><a href=https://twitter.com/akerman_david>Twitter </a> </li>
   <li><a href=https://github.com/dakerman21>Github </a> </li> </ul>
 <br>
-<strong>University of Maryland Broadcast Journalism Student </strong>
+<div id="title">University of Maryland Broadcast Journalism Student </div>
     <br>
-    <p>David is currently a senior at the University of Maryland, majoring
+    <p class="description">David is currently a senior at the University of Maryland, majoring
     in Broadcast Journalism and minoring in Spanish. </p>
     <br>
-<div id="sectionheader"> Experience: </div>
-<h3> Staff Writer </h3>
-<h4>Heatnation.com </h4>
-<h5> October 2017 - Present </h5>
-    <p> I wrote editorials and news articles regarding the Miami Heat.
+  <!-- This is now "sectionheader" -->
+<div class="sectionheader"> Experience: </div>
+  <!-- This is now "jobtitle" -->
+<div class="jobtitle"> Staff Writer </div>
+<div class="organization">Heatnation.com </div>
+<div class="date"> October 2017 - Present </div>
+    <p class="description"> I wrote editorials and news articles regarding the Miami Heat.
           My articles have been featured on Bleacher Report, reaching 271,730
           followers across Facebook and Twitter. </p>
       <br>
-        <h3> Sports Editor </h3>
-        <h4> La Voz Unida </h4>
-        <h5> March 2020 - Present </h5>
-          <p> I managed the sports section for a new, independent student-run
+        <div class="jobtitle"> Sports Editor </div>
+        <div class="organization"> La Voz Unida </div>
+        <div class="date"> March 2020 - Present </div>
+          <p class="description"> I managed the sports section for a new, independent student-run
         publication at the University of Maryland. I helped establish and implement the vision, target demographics and
         social media strategy for the newspaper. </p>
         <br>
-    <h3> Network News Intern </h3>
-    <h4> Univision Communications Inc. </h4>
-    <h5> June 2019 - August 2019 </h5>
-      <p> I assisted in production of Univision’s network news shows,
+    <div class="jobtitle"> Network News Intern </div>
+    <div class="organization"> Univision Communications Inc. </div>
+    <div class="date"> June 2019 - August 2019 </div>
+      <p class="description"> I assisted in production of Univision’s network news shows,
         online and on-air and the special coverage of Joaquín “El Chapo” Guzmán’s sentencing.
         I was also <a href=https://twitter.com/akerman_david/status/1154496804815331330>
           featured </a> on a segment for Univision’s Edición Digital
           on National Intern Day </p>
     <br>
-    <h3>Play-by-Play and Color Commentator, Radio Host </h3>
-    <h4>WMUC Sports</h4>
-    <h5>August 2017 – September 2019</h5>
-        <p> I provided play-by-play and color commentary for the University
+    <div class="jobtitle">Play-by-Play and Color Commentator, Radio Host </div>
+    <div class="organization">WMUC Sports</div>
+    <div class="date">August 2017 – September 2019</div>
+        <p class="description"> I provided play-by-play and color commentary for the University
         of Maryland's women's soccer team.I became the first commentator to call a game in Spanish for
         WMUC Sports. I recapped the biggest news in MMA each week as the host of
           "MMA Talk."</p>
         <br>
-     <h3> Co-Sports Editor </h3>
-     <h4>The Raider Voice: Gulliver Preparatory's Newspapers</h4>
-     <h5>August 2016 - May 2017 </h5>
-       <p>I managed the sports section for Gulliver Preparatory’s award-winning
+     <div class="jobtitle"> Co-Sports Editor </div>
+     <div class="organization">The Raider Voice: Gulliver Preparatory's Newspapers</div>
+     <div class="date">August 2016 - May 2017 </div>
+       <p class="description">I managed the sports section for Gulliver Preparatory’s award-winning
          newspaper. My responsibilities included assigning and writing articles,
          conducting interviews with different subjects, and designing the
          layout for the sports section. </p>
       <br>
-      <h2> Education: </h2>
-      <ul>
+      <div class="sectionheader"> Education: </div>
+      <ul id="degrees">
         <li>Bachelor’s Candidate, Broadcast Journalism, University of Maryland
         </li>
         <li> Expected Graduation: May 2021 </li>
       </ul>
       <br>
-      <h2> Skills: </h2>
-      <ul>
+      <div class="sectionheader"> Skills: </div>
+      <ul id="do">
         <li>
           Proficient in Adobe Photoshop and Adobe Premiere Pro </li>
         <li>
@@ -84,7 +86,7 @@
           Experienced in different aspects of journalism including
           writing, editing, and visual storytelling. </li>
       </ul>
-      
+
 </div>
 </body>
 </html>
