formatted resume a bit more to look closer to the example
still need to work out some things in order to have it exactly like the resume

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 <!--
 <img src="resume photo.jpg" width="300px"> </img>
 !-->
-<ul class="menu" "top">
+<ul class="menu">
   <li>davidakerman21@gmail.com</li>
   <li><a href=https://www.linkedin.com/in/david-m-akerman/>Linkedin </a> </li>
   <li><a href=https://twitter.com/akerman_david>Twitter </a> </li>
   <li><a href=https://github.com/dakerman21>Github </a> </li> </ul>
 <br>
-<div id="title" class="top">University of Maryland Broadcast Journalism Student </div>
+<div id="title"> <div class= "top">University of Maryland Broadcast Journalism Student </div>
     <br>
-    <p class="description">David is currently a senior at the University of Maryland, majoring
-    in Broadcast Journalism and minoring in Spanish. </p>
+    <p class="description"> <div class="top">David is currently a senior at the University of Maryland, majoring
+    in Broadcast Journalism and minoring in Spanish. </div> </p>
     <br>
   <!-- This is now "sectionheader" -->
 <div class="sectionheader"> Experience: </div>
