--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
   <li><a href=https://twitter.com/akerman_david>Twitter </a> </li>
   <li><a href=https://github.com/dakerman21>Github </a> </li> </ul>
 <br>
-<div id="title"> <div class= "top">University of Maryland Broadcast Journalism Student </div>
+  <div id="title">
+  <div class= "toptitle">University of Maryland Broadcast Journalism Student </div> </div>
     <br>
-    <p class="description"> <div class="top">David is currently a senior at the University of Maryland, majoring
-    in Broadcast Journalism and minoring in Spanish. </div> </p>
+    <div class="top"> <p class="description"> David is currently a senior at the University of Maryland, majoring
+    in Broadcast Journalism and minoring in Spanish. He has experience in many forms of journalism, including writing,
+    photography, and videography. Throughout his time in college he has become especially interested in the
+    documentation of events through the use of photos and videos. </p> </div>
     <br>
   <!-- This is now "sectionheader" -->
 <div class="sectionheader"> Experience: </div>
