--- a/index.html
+++ b/index.html
@@ -76,17 +76,17 @@
       <ul id="degrees">
         <li>Bachelor’s Candidate, Broadcast Journalism, University of Maryland
         </li>
-        <li> Expected Graduation: May 2021 </li>
+        <li> <strong> Expected Graduation: </strong> May 2021 </li>
       </ul>
       <br>
       <div class="sectionheader"> Skills: </div>
       <ul id="do">
         <li>
-          Proficient in Adobe Photoshop and Adobe Premiere Pro </li>
+          <strong> Programs:</strong> Proficient in Adobe Photoshop and Adobe Premiere Pro </li>
         <li>
-          Native speaker of both English and Spanish </li>
+          <strong> Languages: </strong> Native speaker of both English and Spanish </li>
         <li>
-          Experienced in different aspects of journalism including
+          <strong>Versatility: </strong> Experienced in different aspects of journalism including
           writing, editing, and visual storytelling. </li>
       </ul>
 
