--- a/akermanlayout/index.html
+++ b/akermanlayout/index.html
@@ -7,10 +7,15 @@
   </head>
 
   <body>
-    How the United Arab Emirates Set Its Sights on Mars
+    <div id="masthead"> The JOUR352 Times </div>
+    <br>
+    <div id="content">
+      <!--headline!-->
+    <div id= "headline"> How the United Arab Emirates Set Its Sights on Mars </div>
 
-By Kenneth Chang | The New York Times
-
+<div id="byline"> By Kenneth Chang | The JOUR352 Times </div>
+<br>
+<p>
 As a girl growing up in Abu Dhabi, one of the United Arab Emirates, Sarah al-Amiri looked at an astronomy book with a photograph of Andromeda, the giant galaxy neighboring our Milky Way.
 
 “I can’t describe it,” Ms. al-Amiri said in an interview, “but just to realize that something that was printed on a page was larger than anything that I’ve ever seen and dwarfs the planet that I live on.”
@@ -82,7 +87,8 @@ Mr. Sharaf and Ms. al-Amiri said the mission was now ready, and the nation’s s
 The greatest success is the training of the people, he said.
 
 “For the Emirates, it’s more about the journey,” Mr. Sharaf said. “It’s more about the impact. Reaching there is one of the goals. But that doesn’t mean that the mission has failed, if we didn’t manage to get there. So failure is an option.”
-
+</p>
+    </div>
   </body>
 
 </html>
