--- a/akermanlayout/index.html
+++ b/akermanlayout/index.html
@@ -13,6 +13,12 @@
       <!--headline!-->
     <h1> The Journey to Mars </h1>
 
+    <img src="uae-mars1.jpg" width=850px </img>
+    <p> <div id="caption"> Sarah al-Amiri is the head of science operations and the deputy project manager for the Emirates Mars Mission, the U.A.E.’s first space mission. <br>
+    <div id="credits"> Photo credits: Khushnum Bhandari/Bloomberg </div> </div> </p>
+
+<br>
+
 <div id="byline"> By Kenneth Chang | The JOUR352 Times </div>
 <br>
 <p>
