--- a/akermanlayout/index.html
+++ b/akermanlayout/index.html
@@ -13,7 +13,7 @@
       <!--headline!-->
     <h1> The Journey to Mars </h1>
 
-    <img src="uae-mars1.jpg" width=850px </img>
+    <img src="uae-mars1.jpg" width=1000px alt="potrait of Sarah al-Amiri"</img>
     <p> <div id="caption"> Sarah al-Amiri is the head of science operations and the deputy project manager for the Emirates Mars Mission, the U.A.E.’s first space mission. <br>
     <div id="credits"> Photo credits: Khushnum Bhandari/Bloomberg </div> </div> </p>
 
@@ -52,6 +52,12 @@ As a girl growing up in Abu Dhabi, one of the United Arab Emirates, Sarah al-Ami
 
 <p> “It’s about starting getting the ball rolling,” Mr. Sharaf said, “and creating that disruptive change, and changing the mind-set.” </p>
 
+<img src="uae-mars2.jpg" width=1000px </img>
+<p> <div id="caption"> Ms. al-Amiri, right, and Omran Sharaf, the Hope project manager, during a 2015 ceremony in Dubai to unveil the mission. <br>
+<div id="credits"> Photo credits: Karim Sahib/Agence France-Presse — Getty Images </div> </div> </p>
+
+<br>
+
 <p> The Emirates previously built and launched three earth-observing satellites, collaborating with a South Korean manufacturer and gradually taking on greater shares of the engineering. The country even has a nascent human spaceflight program. Last year, the U.A.E. bought a seat on a Russian Soyuz rocket and sent its first astronaut, Hazzaa al-Mansoori, for an eight-day stay at the International Space Station. </p>
 
 <p> For the Mars mission, the country took a similar approach to the earlier satellites by working with the Laboratory for Atmospheric and Space Physics at the University of Colorado Boulder, where Hope was built before being sent to Dubai for testing. </p>
@@ -80,6 +86,10 @@ As a girl growing up in Abu Dhabi, one of the United Arab Emirates, Sarah al-Ami
 
 <p> “Based on that, we started working on a plan to get the team across to Japan as soon as possible,” Ms. al-Amiri said.</p>
 
+<img src="uae-mars3.jpg" width=1000px </img>
+<p> <div id="caption"> Engineers at work on the Hope spacecraft. <br>
+<div id="credits"> Photo credits: Emirati Mars Mission </div> </div> </p>
+<br>
 <p> They shuffled some of the tests in order to hurry the spacecraft to Japan, three weeks earlier than originally planned, and where some of the testing would instead be completed.</p>
 
 <p> Travel restrictions meant team members could not travel back and forth. A small team went ahead in early April to wait out a quarantine. Two weeks later, the cargo plane with Hope flew to Japan with another small team from the Emirates.</p>
@@ -93,6 +103,17 @@ As a girl growing up in Abu Dhabi, one of the United Arab Emirates, Sarah al-Ami
 <p>The greatest success is the training of the people, he said. </p>
 
 <p> “For the Emirates, it’s more about the journey,” Mr. Sharaf said. “It’s more about the impact. Reaching there is one of the goals. But that doesn’t mean that the mission has failed, if we didn’t manage to get there. So failure is an option.”</p>
+
+<h1> <div id="readmore2"> Read more </div> </h1>
+<div id="readmore">
+    <a href=https://www.nytimes.com/2020/07/22/science/mars-china-launch.html?action=click&block=associated_collection_recirc&impression_id=8fa169b0-cd41-11ea-9e45-6dfedec6de97&index=0&pgtype=Article&region=footer> China's Mars Mission, Tianwen-1, Begins Its Monthslong Journey </a>
+    <br>
+    <br>
+    <a href=https://www.nytimes.com/2020/07/22/science/china-mars-mission.html?action=click&block=associated_collection_recirc&impression_id=8fa169b1-cd41-11ea-9e45-6dfedec6de97&index=1&pgtype=Article&region=footer> China Will Answer 'Heavenly Question': Can It Land on Mars? </a>
+    <br>
+    <br>
+    <a href=https://www.nytimes.com/2020/07/19/science/emirates-mars-mission.html?action=click&block=associated_collection_recirc&impression_id=8fa169b2-cd41-11ea-9e45-6dfedec6de97&index=2&pgtype=Article&region=footer> Mars Mission From United Arab Emirates Embars on 7-Month Journey </a>
+  </div>
     </div>
   </body>
 
