--- a/akermanlayout/index.html
+++ b/akermanlayout/index.html
@@ -11,7 +11,7 @@
     <br>
     <div id="content">
       <!--headline!-->
-    <h1> The Journey to Mars </h1>
+    <h1> Resuming The Journey to Mars </h1>
 
     <img src="uae-mars1.jpg" width=1000px alt="potrait of Sarah al-Amiri"</img>
     <p> <div id="caption"> Sarah al-Amiri is the head of science operations and the deputy project manager for the Emirates Mars Mission, the U.A.E.’s first space mission. <br>
@@ -31,6 +31,8 @@ As a girl growing up in Abu Dhabi, one of the United Arab Emirates, Sarah al-Ami
 <p> Just 33 years old, she is the head of science operations and the deputy project manager for a space probe that the U.A.E. is about to send to Mars. </p>
 
 <p> A rocket lifting a spacecraft called Hope has begun its journey to Mars. The launch will be the boldest move yet by a country that is looking to establish a future that will long outlive its oil wealth, and sees a space program as one way to accomplish that goal. </p>
+
+<blockquote> "Hope will give planetary scientists their first global view of Martian weather at all times of day." </blockquote>
 
 <p> Mars will be much in the news for the next month, a once-every-26-month interlude when Earth and Mars line up to allow robotic spacecraft to make a relatively quick trip. After several delays, NASA’s next Mars rover, Perseverance, with instruments to search for chemical signs of past life, is scheduled to launch on July 30. China will also launched an ambitious mission to Mars, Tianwen-1 on July 23. </p>
 
@@ -52,7 +54,7 @@ As a girl growing up in Abu Dhabi, one of the United Arab Emirates, Sarah al-Ami
 
 <p> “It’s about starting getting the ball rolling,” Mr. Sharaf said, “and creating that disruptive change, and changing the mind-set.” </p>
 
-<img src="uae-mars2.jpg" width=1000px </img>
+<img src="uae-mars2.jpg" width=1000px alt="Ms. al-Amiri and Omran Sharaf speaking at a ceremony."</img>
 <p> <div id="caption"> Ms. al-Amiri, right, and Omran Sharaf, the Hope project manager, during a 2015 ceremony in Dubai to unveil the mission. <br>
 <div id="credits"> Photo credits: Karim Sahib/Agence France-Presse — Getty Images </div> </div> </p>
 
@@ -86,7 +88,7 @@ As a girl growing up in Abu Dhabi, one of the United Arab Emirates, Sarah al-Ami
 
 <p> “Based on that, we started working on a plan to get the team across to Japan as soon as possible,” Ms. al-Amiri said.</p>
 
-<img src="uae-mars3.jpg" width=1000px </img>
+<img src="uae-mars3.jpg" width=1000px alt="Engineers working on the Hope spacecraft" </img>
 <p> <div id="caption"> Engineers at work on the Hope spacecraft. <br>
 <div id="credits"> Photo credits: Emirati Mars Mission </div> </div> </p>
 <br>
