--- a/akermanlayout/index.html
+++ b/akermanlayout/index.html
@@ -40,6 +40,10 @@ As a girl growing up in Abu Dhabi, one of the United Arab Emirates, Sarah al-Ami
 
 <p> Preparations for Hope, the smallest of the bunch, proceeded smoothly, and it was the first to be ready for liftoff. </p>
 
+<p>
+  <img src="hope-spacecraft-graphic.gif" </img>
+</p>
+
 <p> Because the U.A.E. does not yet have its own rocket industry, it bought the launch for Hope aboard an H-IIA rocket from Mitsubishi Heavy Industries, a machinery maker in Japan. Because of bad weather at the launchpad on an island in Japan, liftoff was delayed a number of times to Sunday, July 19, or Monday local time. </p>
 
 <p> About the size of a Mini Cooper car, Hopeis to arrive in orbit around Mars in February. The spacecraft — which cost about $200 million to build and launch — will carry three instruments: an infrared spectrometer, an ultraviolet spectrometer and a camera. </p>
