--- a/akermanlayout/index.html
+++ b/akermanlayout/index.html
@@ -11,9 +11,9 @@
     <br>
     <div id="content">
       <!--headline!-->
-    <h1> Resuming The Journey to Mars </h1>
+    <h1> Resuming the Journey To Mars </h1>
 
-    <img src="uae-mars1.jpg" width=1000px alt="potrait of Sarah al-Amiri"</img>
+    <img src="uae-mars1.jpg" width=950px alt="potrait of Sarah al-Amiri"</img>
     <p> <div id="caption"> Sarah al-Amiri is the head of science operations and the deputy project manager for the Emirates Mars Mission, the U.A.E.’s first space mission. <br>
     <div id="credits"> Photo credits: Khushnum Bhandari/Bloomberg </div> </div> </p>
 
@@ -40,6 +40,15 @@ As a girl growing up in Abu Dhabi, one of the United Arab Emirates, Sarah al-Ami
 
 <p> Preparations for Hope, the smallest of the bunch, proceeded smoothly, and it was the first to be ready for liftoff. </p>
 
+<br>
+
+<p> <div id= "hopespacecraft"> The Hope Spacecraft </div>
+<div id="gifdescription"> “The United Arab Emirates’ first Mars mission aims to investigate the Martian atmosphere. The orbiter’s giant solar panel wings will deploy in space after launch.” </div>
+</p>
+
+<img src="hope-spacecraft-graphic.gif" width="950px" alt="GIF of the Hope Spacecraft" </img>
+<div id="credits"> By Eleanor Lutz | Source: Mohammed Bin Rashid Space Center </div>
+
 <p> Because the U.A.E. does not yet have its own rocket industry, it bought the launch for Hope aboard an H-IIA rocket from Mitsubishi Heavy Industries, a machinery maker in Japan. Because of bad weather at the launchpad on an island in Japan, liftoff was delayed a number of times to Sunday, July 19, or Monday local time. </p>
 
 <p> About the size of a Mini Cooper car, Hopeis to arrive in orbit around Mars in February. The spacecraft — which cost about $200 million to build and launch — will carry three instruments: an infrared spectrometer, an ultraviolet spectrometer and a camera. </p>
@@ -54,7 +63,7 @@ As a girl growing up in Abu Dhabi, one of the United Arab Emirates, Sarah al-Ami
 
 <p> “It’s about starting getting the ball rolling,” Mr. Sharaf said, “and creating that disruptive change, and changing the mind-set.” </p>
 
-<img src="uae-mars2.jpg" width=1000px alt="Ms. al-Amiri and Omran Sharaf speaking at a ceremony."</img>
+<img src="uae-mars2.jpg" width=950px alt="Ms. al-Amiri and Omran Sharaf speaking at a ceremony."</img>
 <p> <div id="caption"> Ms. al-Amiri, right, and Omran Sharaf, the Hope project manager, during a 2015 ceremony in Dubai to unveil the mission. <br>
 <div id="credits"> Photo credits: Karim Sahib/Agence France-Presse — Getty Images </div> </div> </p>
 
@@ -88,7 +97,7 @@ As a girl growing up in Abu Dhabi, one of the United Arab Emirates, Sarah al-Ami
 
 <p> “Based on that, we started working on a plan to get the team across to Japan as soon as possible,” Ms. al-Amiri said.</p>
 
-<img src="uae-mars3.jpg" width=1000px alt="Engineers working on the Hope spacecraft" </img>
+<img src="uae-mars3.jpg" width=950px alt="Engineers working on the Hope spacecraft" </img>
 <p> <div id="caption"> Engineers at work on the Hope spacecraft. <br>
 <div id="credits"> Photo credits: Emirati Mars Mission </div> </div> </p>
 <br>
